syntax = "proto3";
package product;
option go_package = "../../services/product/;product";
message Request {
  int32 productId = 1;
}

message Response {
  int32 productId = 1;
  string productName = 2;
  int32 stock = 3;
}

//定义RPC服务
service ProductService {
  rpc GetStock (Request)returns (Response);
}